# mx-multisig-and-modules

./: Cargo.toml  README.md
common-modules/multisig-interactions/: Cargo.toml
common-modules/multisig-interactions/src/: lib.rs  storage.rs  views.rs
common-modules/only-by-multisig/: Cargo.toml
common-modules/only-by-multisig/src/: lib.rs
common-modules/only-multisig/: Cargo.toml
common-modules/only-multisig/src/: lib.rs
multisig-improved/: Cargo.toml
multisig-improved/src/action_types/: external_module.rs  perform.rs  propose.rs
multisig-improved/src/common_types/: user_role.rs
multisig-improved/src/ms_endpoints/: propose.rs
multisig-improved/wasm/: Cargo.toml
multisig-improved/wasm-multisig-full/: Cargo.toml
multisig-improved/wasm-multisig-view/: Cargo.toml
passthrough/: Cargo.toml
passthrough/meta/: Cargo.toml
passthrough/meta/src/: main.rs
passthrough/src/: lib.rs
passthrough/src/multisig_interactions/: main.rs  mod.rs  storage.rs  views.rs
passthrough/tests/: pass_test.rs
passthrough/tests/pass_setup/: mod.rs
passthrough/wasm/: Cargo.toml
passthrough/wasm/src/: lib.rs
