[package]
name = "multisig-improved"
version = "1.0.0"
authors = ["Andrei Marinica <andrei.marinica@multiversx.com>, Dorin Marian Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.52.3"

[dependencies.multiversx-sc-modules]
version = "=0.52.3"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.52.3"

[dev-dependencies.adder]
git = "https://github.com/multiversx/mx-contracts-rs"
rev = "f5cf436"

[dev-dependencies.factorial]
git = "https://github.com/multiversx/mx-contracts-rs"
rev = "f5cf436"
